# s3

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
